# frr-sidecar

./: AGENTS.md  README.md
.github/workflows/: publish.yml
charts/frr-sidecar/: CHANGELOG.md  Chart.yaml  README.md  values.yaml
charts/frr-sidecar/templates/: _configmap.tpl  _container.tpl  _frrconf.tpl  _image.tpl  _initContainer.tpl  _volume.tpl
image/: .dockerignore  Dockerfile  README.md  entrypoint.sh  garuda_utils.py  pyproject.toml  render_frr.py  transit_watcher.py  vty_bridge.py
image/src/garuda_frr/: __init__.py  entrypoint.py  render.py  transit_watcher.py  utils.py  vty_bridge.py  vtysh_client.py
tests/pyunit/: README.md  _frr_config_parser.py  conftest.py  test_entrypoint.py  test_frr_config_parser.py  test_readyz.py  test_render_frr.py  test_transit_watcher.py  test_vty_bridge.py  test_vtysh_client.py
